# Liss

./: .gitignore  .gitmodules  Makefile  README.md  clang_license.txt  git-archive-all.sh  log-table.py  make_tar.sh  oldtimes-assume-semantics.txt  oldtimes.txt  prep_run.sh  questions.txt  run_synth.sh  run_synth_long.sh  times-langinc.txt  times.txt  times_long.txt
libs/: z3++.h
src/: CMakeLists.txt  GIT.cpp.in  GIT.h  Liss.kdev4  main.cpp  main_automat.cpp  options.cpp  options.h  types.cpp  types.h
src/CMake/: FindLLVM.cmake  GetGitRevisionDescription.cmake  PrecompiledHeader.cmake
src/abstraction/: CMakeLists.txt  compressed_automaton.cpp  compressed_automaton.h  concurrent_automaton.cpp  concurrent_automaton.h  concurrent_state.cpp  concurrent_state.h  csymbol.h  identifier_store.cpp  identifier_store.h  location.h  symbol.cpp  symbol.h
src/actions/: CMakeLists.txt  action_base.cpp  action_base.h  deadlock_check.cpp  deadlock_check.h  inclusion_test.cpp  inclusion_test.h  perf_test.cpp  perf_test.h  print.cpp  print.h  print_cfg.cpp  print_cfg.h  print_locks.cpp  print_locks.h  synthesis.cpp  synthesis.h  synthesis2.cpp  synthesis2.h
src/automata/: deadlock_algo.h  perf_test.h  perf_test_old.h  results.h
src/cfg/: CMakeLists.txt  abstract_cfg.cpp  abstract_cfg.h  automaton.cpp  automaton.h  dot_printer.cpp  dot_printer.h  program.cpp  program.h
src/clang_interf/: CMakeLists.txt  abstraction_consumer.cpp  abstraction_consumer.h  cfg_visitor.cpp  cfg_visitor.h  clang_helpers.cpp  clang_helpers.h  parse_error.h  pch.h  statement_visitor.cpp  statement_visitor.h  thread_visitor.cpp  thread_visitor.h
src/placement/: CMakeLists.txt  location.h  lock_locations.cpp  lock_locations.h  place_locks.cpp  place_locks.h  print_program.cpp  print_program.h
src/synthesis/: CMakeLists.txt  constraint.cpp  constraint.h  find_locks.cpp  find_locks.h  insertion.cpp  insertion.h  location.cpp  location.h  lock.cpp  lock.h  reordering.cpp  reordering.h  reorderings.cpp  reorderings.h  synchronisation.cpp  synchronisation.h  trace.cpp  trace.h  trace_helpers.cpp  trace_helpers.h  z3_helpers.h
src/tests/: antichain.cpp  antichain_old.cpp
tests/: langinc.h
tests/cases/: langinc_fails.c  leonid.absmin.c  leonid.c  leonid.coarse.c  leonid.small.c  pavol.absmin.c  pavol.c  pavol.coarse.c  (+11 more)
(+166 files in other folders)
